clusters/talos-cluster/readable/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: readable
  namespace: readable
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: readable
  template:
    metadata:
      labels:
        app: readable
    spec:
      imagePullSecrets:
        - name: zot-pull-secret
      securityContext:
        fsGroup: 1000
      containers:
        - name: readable
          image: zot.maix.ovh/readable:v0.0.44@sha256:f5551bb68b246e68eb84c3296bef0899a0f597b479864a3e9a60e9f9516648e3
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi
          volumeMounts:
            - name: data
              mountPath: /data
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 20
            periodSeconds: 15
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 10
            periodSeconds: 5
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: readable-data
