clusters/talos-cluster/readable/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: readable-service
  namespace: readable
spec:
  selector:
    app: readable
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
